--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 </div>
                 <div class="auto cell"></div>
                 <div class="large-4 cell">
-                    <h1>Linda de Onda - Surfing School</h1>
-                    <h2>We're inspired by the ocean</h2>
-                    <p>Full website coming soon</p>
+                    <h2>linda de onda - surfing school</h2>
+                    <h1>We're inspired by the ocean</h1>
+                    <p>full website coming soon...</p>
                 </div>
                 <div class="auto cell"></div>
                 <div class="large-1 cell">
@@ -68,10 +68,12 @@
                 <img src="img/aula.jpg" alt="">
                 <img src="img/bandeira.jpg" alt="" id="intro_image_2">
             </div>
-            <div class="large-4 large-offset-1 cell">
-                <h2>Sea.<br>Surf.<br>Bodyboard.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-            </div>
+                    <div class="large-4 large-offset-1 cell">
+                        <h3>Sea.<br>Surf.<br>Bodyboard.</h3>
+                        <p>We’ve been doing this forever.<br> The sea is our life. <br>
+        We love it. We are crazy about it. <br>
+        All we want is to spread this passion.</p>
+                    </div>
         </div>
     </div>
 
@@ -82,8 +84,9 @@
                     <div class="grid-y">
                         <div class="auto cell"></div>
                         <div class="large-8 cell">
-                            <h2>Our people.<br>Our team.</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+                            <h3>Our people.<br>Our team.</h3>
+                            <p>We are surfers, we are graduated in sports and we even have a former world bodyboard champion (twice!) in our team... But what we are really proud of is our friendship and good vibes that unites us. This is our most distinguishing feature.
+That’s why you are going to walk out of the ocean wearing a smile on your face!</p>
                         </div>
                         <div class="auto cell"></div>
                     </div>
@@ -99,13 +102,15 @@
                 <img src="img/aula.jpg" alt="">
             </div>
             <div class="large-4 large-offset-1 cell">
-                <h2>Evolution.<br>Competition.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+                <h3>Evolution.<br>Competition.</h3>
+                <p>Some people will remember these experiences forever. Others become addicted...
+That’s why, beyond the one time events, we have our own competition teams. We taught national champions, we won the Portuguese Bodyboard Cup and our athletes are a recurrent part of the National Team in the European Championship.
+If your goal is evolution we have got you covered... If you want to move beyond that: Welcome to the Team!</p>
             </div>
         </section>
         <section class="grid-x grid-margin-x" id="instagram">
             <div class="large-12 cell">
-                <h3>Check our Instagram</h3>
+                <h4>check our instagram</h4>
                 <a href="#"><img src="https://unsplash.it/200/80/?random" alt=""></a>
             </div>
             <div class="large-4 cell">
@@ -123,12 +128,16 @@
     <section id="promo_code">
         <div class="grid-container">
             <div class="grid-x">
-                <div class="grid-y">
-                    <div class="large-2 cell">logos</div>
-                    <div class="auto cell"></div>
-                    <div class="large-4 cell">texto</div>
-                    <div class="auto cell"></div>
-                    <div class="large-2 cell">footer</div>
+                <div class="large-4 cell">
+                    <div class="grid-y">
+                        <div class="large-2 cell">logos</div>
+                        <div class="auto cell"></div>
+                        <div class="large-4 cell">
+                            <h3>Use our promocode <br><span>linhadeonda</span><br>and get a 10% Discount on Deeply.eu</h3>
+                        </div>
+                        <div class="auto cell"></div>
+                        <div class="large-2 cell">footer</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -136,25 +145,25 @@
     
     <div class="grid-container">
         <section class="grid-x grid-margin-x" id="trip_advisor">
-            <h3 class="large-12 cell">What they say</h3>
+            <h4 class="large-12 cell">what they say</h4>
             <div class="large-4 cell">
                 <img src="img/1stGuy.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <p>We highly recommend this school if surfing in Porto region!</p>
             </div>
             <div class="large-4 cell">
                 <img src="img/1stGuy.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <p>Great school and great teachers! It's the perfect place to learn surfing...</p>
             </div>
             <div class="large-4 cell">
                 <img src="img/1stGuy.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <p>Amazing team that treats you like a friend (...)</p>
             </div>
         </section>
         <section class="grid-x" id="beaches">
             <div class="large-5 large-offset-1 cell" id="matosinhos">
                 <img src="img/mat.jpg" alt="">
                 <div>
-                    <h4>Where we are</h4>
+                    <h5>Where we are</h5>
                     <h3>Praia de Matosinhos</h3>
                 </div>
                 <a href="">See the beach live</a>
@@ -162,10 +171,12 @@
             <div class="large-4 large-offset-1 cell" id="leca">
                 <img src="img/lec.jpg" alt="">
                 <div>
-                    <h4>Where we are</h4>
+                    <h5>Where we are</h5>
                     <h3>Praia de Leça</h3>
                 </div>
-                <a href="">See the beach live</a>
+                <div class="button">
+                    <a href="">See the beach live</a>
+                </div>
             </div>
         </section>
     </div>
@@ -182,18 +193,18 @@
                 <div class="large-7 cell">
                     <div class="grid-x grid-margin-x">
                         <div class="large-8 cell">
-                            <h3>find us</h3>
+                            <h4>find us</h4>
                             <img src="img/logos/Facebook.svg" class="logo_footer"/>
                             <img src="img/logos/Instagram.svg" class="logo_footer"/>
                             <img src="img/logos/Vimeo.svg" class="logo_footer"/>
                             <img src="img/logos/TripAdvisor.svg" class="logo_footer"/>
                         </div>
                         <div class="large-4 cell">
-                            <h3>powered by</h3>
+                            <h4>powered by</h4>
                             <img src="assetsL/logos/Deeply.svg" class="logo_footer" />
                         </div>
                         <div class="large-12 cell">
-                            <h3>partners</h3>
+                            <h4>partners</h4>
                             <img src="img/logos/AON.svg" class="logo_footer"/>
                             <img src="img/logos/golocal.svg" class="logo_footer"/>
                             <img src="img/logos/withlocals.svg" class="logo_footer"/>
