Added all the links Changed (not that much) the beach section in mobile Changed the Where we are, to small caps, and created a class for that tha is h6

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="auto cell"></div>
                 <div class="large-4 cell">
-                    <h2>linda de onda - surfing school</h2>
+                    <h2>linha de onda - surfing school</h2>
                     <h1>We're inspired by the ocean</h1>
                     <p>full website coming soon...</p>
                 </div>
@@ -122,13 +122,13 @@ If your goal is evolution we have got you covered... If you want to move beyond 
                 <a href="https://www.instagram.com/linhadeonda/" class="button">Follow</a>
             </div>
             <div class="large-4 cell">
-                <a href="#"><img src="img/foto_instagram_1.jpg" alt=""></a>
+                <a href="https://www.instagram.com/p/BYEGUrHjz4u/?taken-by=linhadeonda"><img src="img/foto_instagram_1.jpg" alt=""></a>
             </div>
             <div class="large-4 cell">
-                <a href="#"><img src="img/foto_instagram_2.jpg" alt=""></a>
+                <a href="https://www.instagram.com/p/BXir__RDZXP/?taken-by=linhadeonda"><img src="img/foto_instagram_2.jpg" alt=""></a>
             </div>
             <div class="large-4 cell">
-                <a href="#"><img src="img/foto_instagram_3.jpg" alt=""></a>
+                <a href="https://www.instagram.com/p/BXnQz3jDJRA/?taken-by=linhadeonda"><img src="img/foto_instagram_3.jpg" alt=""></a>
             </div>
         </section>
     </div>
@@ -148,7 +148,7 @@ If your goal is evolution we have got you covered... If you want to move beyond 
                             <h3>Use our promocode <br><span>linhadeonda</span><br>and get a 10% Discount on Deeply.eu</h3>
                         </div>
                         <div class="auto cell"></div>
-                        <div class="large-2 cell"><a href="deeply.eu/pt/" class="button">Shop now</a></div>
+                        <div class="large-2 cell"><a href="http://deeply.eu/pt/" class="button">Shop now</a></div>
                     </div>
                 </div>
             </div>
@@ -175,10 +175,12 @@ If your goal is evolution we have got you covered... If you want to move beyond 
             </div>
         </section>
         <section class="grid-x" id="beaches">
+            <h4 class="large-12 hide-for-medium hide-for-large">where we are</h4>
+
             <div class="large-5 large-offset-1 cell" id="matosinhos">
                 <img src="img/mat.jpg" alt="Praia de Matosinhos" class="shadow">
                 <div>
-                    <p>Where we are</p>
+                    <h6 class="hide-for-small-only">where we are</h6>
                     <h3>Praia de Matosinhos</h3>
                 </div>
                     <a href="http://beachcam.meo.pt/livecams/praia-de-matosinhos/" class="button">See the beach live</a>
@@ -186,7 +188,7 @@ If your goal is evolution we have got you covered... If you want to move beyond 
             <div class="large-4 large-offset-1 cell" id="leca">
                 <img src="img/lec.jpg" alt="Praia de Leça da Palmeira" class="shadow">
                 <div>
-                    <p>Where we are</p>
+                    <h6 class="hide-for-small-only">where we are</h6>
                     <h3>Praia de Leça</h3>
                 </div>
                     <a href="http://beachcam.meo.pt/livecams/le%C3%A7a-da-palmeira/" class="button">See the beach live</a>
