--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="auto cell"></div>
                 <div class="large-2 cell">
-                    <a href="#intro" class="scroll"><img src="img/scroll.svg"/></a>
+                    <a href="#intro" class="scroll"><img src="img/scroll.svg" alt=""></a>
                 </div>
             </div>
         </div>
@@ -82,7 +82,6 @@
                         <div class="large-8 cell">
                             <h3>Our people.<br>Our team.</h3>
                             <p>We are surfers, we are graduated in sports and we even have a former world bodyboard champion (twice!) in our team... But what we are really proud of is our friendship and good vibes that unites us. This is our most distinguishing feature.That’s why you are going to walk out of the ocean wearing a smile on your face!
-                            <img scr="img/fototeam.jpg" alt="Linha de Onda Team" ></p>
                         </div>
                         <div class="auto cell"></div>
                     </div>
@@ -129,8 +128,8 @@ If your goal is evolution we have got you covered... If you want to move beyond 
                     <div class="grid-y">
                         <div class="auto cell"></div>
                         <div class="large-2 cell">
-                            <img src="img/logos/DeeplyLogo.svg" class="logo_footer"/>
-                            <img src="img/lo_print_lycra.png" class="logo_footer"/>
+                            <img src="img/logos/DeeplyLogo.svg" alt="" class="logo_footer"/>
+                            <img src="img/lo_print_lycra.png" alt="" class="logo_footer"/>
                         </div>
                         <div class="auto cell"></div>
                         <div class="large-4 cell">
@@ -199,43 +198,43 @@ If your goal is evolution we have got you covered... If you want to move beyond 
                         <div class="large-8 cell">
                             <h4>find us</h4>
                             <a href="https://www.facebook.com/linhadeonda/" target="_blank">
-                                <img src="img/logos/FacebookLogo.svg" class="logo_footer"/>
+                                <img src="img/logos/FacebookLogo.svg" alt="" class="logo_footer"/>
                             </a>
                             <a href="https://www.instagram.com/linhadeonda/" target="_blank">
                                 <img src="img/logos/InstagramLogo.svg" class="logo_footer"/>
                             </a>
                             <a href="https://vimeo.com/linhadeonda" target="_blank">
-                                <img src="img/logos/VimeoLogo.svg" class="logo_footer"/>
+                                <img src="img/logos/VimeoLogo.svg" alt="" class="logo_footer"/>
                             </a>
                             <a href="https://www.tripadvisor.pt/Attraction_Review-g652092-d9533419-Reviews-Linha_de_Onda-Matosinhos_Porto_District_Northern_Portugal.html" target="_blank">
-                                <img src="img/logos/TripAdvisorLogo.svg" class="logo_footer"/>
+                                <img src="img/logos/TripAdvisorLogo.svg" alt="" class="logo_footer"/>
                             </a>
                         </div>
                         <div class="large-4 cell">
                             <h4>powered by</h4>
                             <a href="https://www.deeply.eu/pt/" target="_blank">
-                                <img src="img/logos/DeeplyLogo.svg" class="logo_footer"/>
+                                <img src="img/logos/DeeplyLogo.svg" alt="" class="logo_footer"/>
                             </a>
                         </div>
                         <div class="large-12 cell">
                             <h4>partners</h4>
                             <a href="https://www.facebook.com/associacao.norte/" target="_blank">
-                                <img src="img/logos/AON%20Logo%20(1).svg" class="logo_footer"/>
+                                <img src="img/logos/AON%20Logo%20(1).svg" alt="" class="logo_footer"/>
                             </a>
                             <a href="http://www.golocal.pt/" target="_blank">
-                                <img src="img/logos/golocal.svg" class="logo_footer"/>
+                                <img src="img/logos/golocal.svg" alt="" class="logo_footer"/>
                             </a>
                             <a href="https://www.withlocals.com/" target="_blank">
-                                <img src="img/logos/withlocals.svg" class="logo_footer"/>
+                                <img src="img/logos/withlocals.svg" alt="" class="logo_footer"/>
                             </a>
                             <a href="https://www.facebook.com/focusjiujitsu/" target="_blank">
-                                <img src="img/logos/focus.svg" class="logo_footer"/>
+                                <img src="img/logos/focus.svg" alt="" class="logo_footer"/>
                             </a>
                             <a href="https://www.aquaplugs.pt/" target="_blank">
-                                <img src="img/logos/aquaplugs.svg" class="logo_footer"/>
+                                <img src="img/logos/aquaplugs.svg" alt="" class="logo_footer"/>
                             </a>
                             <a href="https://www.fishybikes.pt/" target="_blank">
-                                <img src="img/logos/fishybikes.svg" class="logo_footer"/>
+                                <img src="img/logos/fishybikes.svg" alt="" class="logo_footer"/>
                             </a>
                         </div>
                     </div>
@@ -245,10 +244,6 @@ If your goal is evolution we have got you covered... If you want to move beyond 
     </footer>
 
 
-
-
-
-    <!-- JS -->
     <!-- JS -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="template/javascripts/vendor/jquery.js"><\/script>')</script>
@@ -256,7 +251,7 @@ If your goal is evolution we have got you covered... If you want to move beyond 
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
     <script> 
-    $(document).on('click', 'a', function(event){
+    $(document).on('click', 'header a', function(event){
         event.preventDefault();
     
         $('html, body').animate({
