- minor visual fixes

--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
     <header>
         <div class="grid-container">
             <div class="grid-y">
-                <div class="large-2 cell">
+                <div class="large-2 small-2 cell">
                     <img src="img/lo_print_lycra.png" alt="" id="logo">
                 </div>
                 <div class="auto cell"></div>
-                <div class="large-4 cell">
+                <div class="large-4 small-4 cell">
                     <h2>linha de onda - surfing school</h2>
                     <h1>We're inspired by the ocean</h1>
                     <p>full website coming soon...</p>
                 </div>
                 <div class="auto cell"></div>
-                <div class="large-2 cell">
+                <div class="large-2 small-2 cell">
                     <a href="#intro" class="scroll"><img src="img/scroll.svg" alt=""></a>
                 </div>
             </div>
@@ -93,14 +93,12 @@
 
     <div class="grid-container">
         <section class="grid-x" id="competition">
-            <div class="large-7 cell">
-                <iframe id="video" class="shadow" src="https://player.vimeo.com/video/84411312?color=ffffff&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
             <div class="large-4 large-offset-1 cell">
                 <h3>Evolution.<br>Competition.</h3>
-                <p>Some people will remember these experiences forever. Others become addicted...
-That’s why, beyond the one time events, we have our own competition teams. We taught national champions, we won the Portuguese Bodyboard Cup and our athletes are a recurrent part of the National Team in the European Championship.
-If your goal is evolution we have got you covered... If you want to move beyond that: Welcome to the Team!</p>
+                <p>Some people will remember these experiences forever. Others become addicted... That’s why, beyond the one time events, we have our own competition teams. We taught national champions, we won the Portuguese Bodyboard Cup and our athletes are a recurrent part of the National Team in the European Championship. If your goal is evolution we have got you covered... If you want to move beyond that: Welcome to the Team!</p>
+            </div>
+            <div class="large-7 cell">
+                <iframe id="video" class="shadow" src="https://player.vimeo.com/video/84411312?color=ffffff&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
         </section>
         <section class="grid-x grid-margin-x" id="instagram">
