Facebook sharing update

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- FACEBOOK -->
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:site_name" content="">
+  <meta property="og:title" content="Linha de Onda - Surfing School">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://linhadeonda.pt/">
+  <meta property="og:image" content="http://linhadeonda.pt/img/facebook_share.jpg">
+  <meta property="og:site_name" content="Linha de Onda">
   <meta property="og:locale" content="pt_PT">
   <meta property="fb:admins" content="1658029422">
 
@@ -35,7 +35,7 @@
 
   <!-- JS -->
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-  <script>window.Modernizr || document.write('<script src="template/javascripts/modernizr-2.8.3.min.js"><\/script>')</script>    
+  <script>window.Modernizr || document.write('<script src="template/javascripts/modernizr-2.8.3.min.js"><\/script>')</script>   
 </head>
 
 <body>
